--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "license": "MIT",
   "homepage": "https://dns.sb",
   "dependencies": {
+    "clsx": "^1.2.1",
     "next": "^13.1.1",
     "nextra": "^2.1.0",
     "nextra-theme-docs": "^2.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-wrap-balancer": "^0.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
@@ -32,8 +34,10 @@
     "eslint": "^8.31.0",
     "eslint-config-next": "^13.1.1",
     "eslint-config-sukka": "^1.6.16",
+    "eslint-plugin-mdx": "^2.0.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.31.11",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3"
   }
 }
