--- a/.github/build.yml
+++ b/.github/build.yml
@@ -4,26 +4,40 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+
       - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
           node-version: 18
-      - uses: actions/cache@v3
+
+      - name: node_modules CI Cache
+        uses: actions/cache@v3
         with:
-          path: '**/node_modules'
+          path: ${{ github.workspace }}/node_modules
           key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Next.js CI Cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('src/**', 'contents/**') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       - name: Install Dependencies
-        run: npm ci
+        run: npm clean-install
+
       - name: Build Site
         run: npm run build && npm run export
+
       - name: Deploy to Server SYD
         uses: easingthemes/ssh-deploy@v4.0.5
         env:
