ci/fix: ssh-deploy doesn't support absolute path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,6 @@ jobs:
           ARGS: '-avz --delete'
           REMOTE_HOST: ${{ env.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          SOURCE: ${{ github.workspace }}/out/*
+          SOURCE: out/*
           TARGET: /home/github/dns.sb/
           EXCLUDE: .git,.github,.gitlab-ci.yml,.nojekyll
