--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,7 @@ jobs:
           - host_id: REMOTE_HOST_KIX
           - host_id: REMOTE_HOST_HKG
           - host_id: REMOTE_HOST_TLL
+          - host_id: REMOTE_HOST_SIN
       fail-fast: false
     env:
       REMOTE_HOST: ${{ secrets[matrix.host_id] }}
