--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js 22
+      - name: Use Node.js 24
         uses: actions/setup-node@v3
         with:
-          node-version: 22
+          node-version: 24
 
       - name: node_modules CI Cache
         uses: actions/cache@v3
@@ -36,7 +36,7 @@ jobs:
         run: npm clean-install
 
       - name: Build Site
-        run: npm run build && npm run export
+        run: npm run build
 
       - name: Upload Build Output to Artifacts
         uses: actions/upload-artifact@v4
