--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "dns.sb",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "DNS.SB",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "export": "next export"
+    "build": "next build && npm run postbuild",
+    "postbuild": "pagefind --site out --output-path out/_pagefind",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
@@ -17,28 +17,28 @@
   "license": "MIT",
   "homepage": "https://dns.sb",
   "dependencies": {
-    "clsx": "^1.2.1",
-    "next": "^13.1.1",
-    "nextra": "^2.1.0",
-    "nextra-theme-docs": "^2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-wrap-balancer": "^0.3.0",
-    "swr": "^2.0.0"
+    "clsx": "^2.1.1",
+    "next": "^16.0.10",
+    "nextra": "^4.6.1",
+    "nextra-theme-docs": "^4.6.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-wrap-balancer": "^1.1.1",
+    "swr": "^2.3.8"
   },
   "devDependencies": {
-    "@types/node": "18.11.10",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "eslint": "^8.31.0",
-    "eslint-config-next": "^13.1.1",
-    "eslint-config-sukka": "^1.6.16",
-    "eslint-plugin-mdx": "^2.0.5",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react": "^7.31.11",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3"
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "pagefind": "^1.3.0",
+    "@types/node": "^24",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.0.10",
+    "@eslint/js": "^9.39.2",
+    "typescript-eslint": "^8.50.0",
+    "tailwindcss": "^4.1.18",
+    "postcss": "^8.5.6",
+    "typescript": "^5.9.3"
   }
 }
